# china_identification_card

./: Cargo.toml  README.md  readme.md
sh/: init.sh
src/: cfg.rs  const.rs  impl.rs  lib.rs  struct.rs  test.rs
src/chinese_id_card/: const.rs  impl.rs  mod.rs  struct.rs
tests/: mod.rs
tests/number/: fn.rs
