[package]
name = "china_identification_card"
version = "0.2.8"
edition = "2021"
license = "MIT"
description = "A Rust library for validating Chinese identification card numbers based on official rules and checksums."
keywords = ["china", "id", "identification", "card", "validation"]
repository = "https://github.com/ltpp-universe/china_identification_card"
categories = ["authentication", "data-structures", "development-tools"]

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"